fix: fixed background layout issue on portrait

--- a/style.css
+++ b/style.css
@@ -103,5 +103,6 @@ a:hover {
 @media (max-width: 1024px) {
 	.section-main {
 		height: auto;
+		min-height: 100vh;
 	}
 }
